Fix tag and text - Make tags appear in their own row - Add padding to text so that it doesn't overlap with the boundaries on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -23,8 +23,14 @@
   border-radius: 5px;
 }
 .itinerary-event .date {
+  padding: 0px 5px;
   display: inline-block;
   font-style: italic;
+}
+.itinerary-event .tag-container {
+  font-style: italic;
+  padding: 0px;
+  margin: 0px;
 }
 .itinerary-event .tag {
   float: right;
